@@ -4,29 +4,36 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.jdbc.AutoConfigureTestDatabase;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
+import ru.yandex.practicum.filmorate.dto.film.FilmDto;
+import ru.yandex.practicum.filmorate.dto.film.GenreDto;
+import ru.yandex.practicum.filmorate.dto.film.NewFilmRequest;
+import ru.yandex.practicum.filmorate.dto.film.UpdateFilmRequest;
+import ru.yandex.practicum.filmorate.dto.rating.RatingDto;
+import ru.yandex.practicum.filmorate.dto.user.NewUserRequest;
+import ru.yandex.practicum.filmorate.dto.user.UserDto;
 import ru.yandex.practicum.filmorate.model.Film;
-import ru.yandex.practicum.filmorate.model.User;
 import ru.yandex.practicum.filmorate.service.FilmService;
 import ru.yandex.practicum.filmorate.service.UserService;
-import ru.yandex.practicum.filmorate.storage.film.FilmStorage;
-import ru.yandex.practicum.filmorate.storage.user.UserStorage;
+import ru.yandex.practicum.filmorate.storage.film.FilmRepository;
+import ru.yandex.practicum.filmorate.storage.user.UserRepository;
 
 import java.time.LocalDate;
+import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 
 @SpringBootTest
 @AutoConfigureMockMvc
+@AutoConfigureTestDatabase
 public class FilmControllerTest {
 
     @Autowired
@@ -42,32 +49,34 @@ public class FilmControllerTest {
     private FilmService filmService;
 
     @Autowired
-    private FilmStorage filmStorage;
+    private FilmRepository filmRepository;
 
     @Autowired
-    private UserStorage userStorage;
+    private UserRepository userRepository;
 
     @BeforeEach
     void clearData() {
         List<Long> filmIds = filmService.findAll().stream()
-                .map(Film::getId)
-                .collect(Collectors.toList());
-        filmIds.forEach(filmStorage::delete);
+                .map(FilmDto::getId)
+                .toList();
+        filmIds.forEach(filmRepository::delete);
 
         List<Long> userIds = userService.findAll().stream()
-                .map(User::getId)
-                .collect(Collectors.toList());
-        userIds.forEach(userStorage::delete);
+                .map(UserDto::getId)
+                .toList();
+        userIds.forEach(userRepository::delete);
     }
 
     @Test
     void shouldCreateFilmWithValidFields() throws Exception {
-        Film validFilm = new Film();
+        var validFilm = new NewFilmRequest();
         validFilm.setName("film");
         validFilm.setDescription("description");
-        validFilm.setReleaseDate(LocalDate.of(2007,7,7));
+        validFilm.setReleaseDate(LocalDate.of(2007, 7, 7));
         validFilm.setDuration(70);
-
+        var mpa = new RatingDto();
+        mpa.setId(1L);
+        validFilm.setMpa(mpa);
         mockMvc.perform(post("/films")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(validFilm)))
@@ -85,7 +94,7 @@ public class FilmControllerTest {
         Film notValidFilm = new Film();
         notValidFilm.setName("");
         notValidFilm.setDescription("description");
-        notValidFilm.setReleaseDate(LocalDate.of(2007,7,7));
+        notValidFilm.setReleaseDate(LocalDate.of(2007, 7, 7));
         notValidFilm.setDuration(70);
 
         mockMvc.perform(post("/films")
@@ -99,7 +108,7 @@ public class FilmControllerTest {
         Film notValidFilm = new Film();
         notValidFilm.setName(null);
         notValidFilm.setDescription("description");
-        notValidFilm.setReleaseDate(LocalDate.of(2007,7,7));
+        notValidFilm.setReleaseDate(LocalDate.of(2007, 7, 7));
         notValidFilm.setDuration(70);
 
         mockMvc.perform(post("/films")
@@ -113,7 +122,7 @@ public class FilmControllerTest {
         Film notValidFilm = new Film();
         notValidFilm.setName("film");
         notValidFilm.setDescription("7".repeat(201));
-        notValidFilm.setReleaseDate(LocalDate.of(2007,7,7));
+        notValidFilm.setReleaseDate(LocalDate.of(2007, 7, 7));
         notValidFilm.setDuration(70);
 
         mockMvc.perform(post("/films")
@@ -127,7 +136,7 @@ public class FilmControllerTest {
         Film notValidFilm = new Film();
         notValidFilm.setName("film");
         notValidFilm.setDescription("description");
-        notValidFilm.setReleaseDate(LocalDate.of(2007,7,7));
+        notValidFilm.setReleaseDate(LocalDate.of(2007, 7, 7));
         notValidFilm.setDuration(0);
 
         mockMvc.perform(post("/films")
@@ -138,10 +147,10 @@ public class FilmControllerTest {
 
     @Test
     void whenCreatingFilm_shouldFailOnNegativeDuration() throws Exception {
-        Film notValidFilm = new Film();
+        var notValidFilm = new NewFilmRequest();
         notValidFilm.setName("film");
         notValidFilm.setDescription("description");
-        notValidFilm.setReleaseDate(LocalDate.of(2007,7,7));
+        notValidFilm.setReleaseDate(LocalDate.of(2007, 7, 7));
         notValidFilm.setDuration(-1);
 
         mockMvc.perform(post("/films")
@@ -161,19 +170,22 @@ public class FilmControllerTest {
 
     @Test
     void shouldUpdateFilmWithValidFields() throws Exception {
-        Film createdFilm = new Film();
+        var createdFilm = new NewFilmRequest();
         createdFilm.setName("film1");
         createdFilm.setDescription("description1");
-        createdFilm.setReleaseDate(LocalDate.of(2007,7,7));
+        createdFilm.setReleaseDate(LocalDate.of(2007, 7, 7));
         createdFilm.setDuration(70);
-        Film savedFilm = filmService.create(createdFilm);
+        var mpa = new RatingDto();
+        mpa.setId(1L);
+        createdFilm.setMpa(mpa);
+        var savedFilm = filmService.create(createdFilm);
         Long id = savedFilm.getId();
 
-        Film updateFilm = new Film();
+        var updateFilm = new UpdateFilmRequest();
         updateFilm.setId(id);
         updateFilm.setName("film2");
         updateFilm.setDescription("description2");
-        updateFilm.setReleaseDate(LocalDate.of(2008,8,8));
+        updateFilm.setReleaseDate(LocalDate.of(2008, 8, 8));
         updateFilm.setDuration(80);
 
         mockMvc.perform(put("/films")
@@ -189,13 +201,20 @@ public class FilmControllerTest {
 
     @Test
     void whenUpdatingFilm_shouldFailOnUnknownId() throws Exception {
-        Film updateFilm = new Film();
+        var updateFilm = new UpdateFilmRequest();
         updateFilm.setId(999L);
         updateFilm.setName("film2");
         updateFilm.setDescription("description2");
-        updateFilm.setReleaseDate(LocalDate.of(2008,8,8));
+        updateFilm.setReleaseDate(LocalDate.of(2008, 8, 8));
         updateFilm.setDuration(80);
-
+        var mpa = new RatingDto();
+        mpa.setId(1L);
+        updateFilm.setMpa(mpa);
+        var genreDto = new GenreDto();
+        genreDto.setId(1L);
+        var genreDtos = new HashSet<GenreDto>();
+        genreDtos.add(genreDto);
+        updateFilm.setGenres(genreDtos);
         mockMvc.perform(put("/films")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(updateFilm)))
@@ -204,11 +223,14 @@ public class FilmControllerTest {
 
     @Test
     void shouldReturnAllFilms() throws Exception {
-        Film validFilm = new Film();
+        var validFilm = new NewFilmRequest();
         validFilm.setName("film");
         validFilm.setDescription("description");
-        validFilm.setReleaseDate(LocalDate.of(2007,7,7));
+        validFilm.setReleaseDate(LocalDate.of(2007, 7, 7));
         validFilm.setDuration(70);
+        var mpa = new RatingDto();
+        mpa.setId(1L);
+        validFilm.setMpa(mpa);
         filmService.create(validFilm);
 
         mockMvc.perform(get("/films"))
@@ -220,27 +242,32 @@ public class FilmControllerTest {
 
     @Test
     void shouldReturnPopularFilms() throws Exception {
-        User user = new User();
+        var user = new NewUserRequest();
         user.setEmail("user@yandex.ru");
         user.setLogin("user1234");
         user.setName("Lexa");
-        user.setBirthday(LocalDate.of(2000,1,1));
-        User savedUser = userService.create(user);
+        user.setBirthday(LocalDate.of(2000, 1, 1));
+        var savedUser = userService.create(user);
         Long userId = savedUser.getId();
 
-        Film film1 = new Film();
+        var film1 = new NewFilmRequest();
         film1.setName("film1");
         film1.setDescription("description1");
-        film1.setReleaseDate(LocalDate.of(2007,7,7));
+        film1.setReleaseDate(LocalDate.of(2007, 7, 7));
         film1.setDuration(70);
-        Film savedFilm1 = filmService.create(film1);
+        var mpa = new RatingDto();
+        mpa.setId(1L);
+        film1.setMpa(mpa);
+        var savedFilm1 = filmService.create(film1);
 
-        Film film2 = new Film();
+        var film2 = new NewFilmRequest();
         film2.setName("film2");
         film2.setDescription("description2");
-        film2.setReleaseDate(LocalDate.of(2008,8,8));
+        film2.setReleaseDate(LocalDate.of(2008, 8, 8));
         film2.setDuration(80);
-        Film savedFilm2 = filmService.create(film2);
+
+        film2.setMpa(mpa);
+        var savedFilm2 = filmService.create(film2);
 
         mockMvc.perform(put("/films/{id}/like/{userId}", savedFilm1.getId(), userId))
                 .andExpect(status().isOk());
@@ -260,35 +287,12 @@ public class FilmControllerTest {
     }
 
     @Test
-    void shouldAddValidLike() throws Exception {
-        Film film = new Film();
-        film.setName("film");
-        film.setDescription("description");
-        film.setReleaseDate(LocalDate.of(2007, 7, 7));
-        film.setDuration(70);
-        Film savedFilm = filmService.create(film);
-        Long filmId = savedFilm.getId();
-
-        User user = new User();
-        user.setEmail("user@yandex.ru");
-        user.setLogin("user1234");
-        user.setBirthday(LocalDate.of(2000, 1, 1));
-        User savedUser = userService.create(user);
-        Long userId = savedUser.getId();
-
-        mockMvc.perform(put("/films/{id}/like/{userId}", filmId, userId))
-                .andExpect(status().isOk());
-
-        assert savedFilm.getLikes().contains(userId);
-    }
-
-    @Test
     void shouldFailOnAddingLike_toUnknownFilm() throws Exception {
-        User user = new User();
+        var user = new NewUserRequest();
         user.setEmail("user@yandex.ru");
         user.setLogin("user1234");
         user.setBirthday(LocalDate.of(2000, 1, 1));
-        User savedUser = userService.create(user);
+        var savedUser = userService.create(user);
         Long userId = savedUser.getId();
 
         mockMvc.perform(put("/films/{id}/like/{userId}", 999L, 1L))
@@ -297,11 +301,14 @@ public class FilmControllerTest {
 
     @Test
     void shouldFailOnAddingLike_toUnknownUser() throws Exception {
-        Film film = new Film();
+        var film = new NewFilmRequest();
         film.setName("film");
         film.setDescription("description");
         film.setReleaseDate(LocalDate.of(2007, 7, 7));
         film.setDuration(70);
+        var mpa = new RatingDto();
+        mpa.setId(1L);
+        film.setMpa(mpa);
         filmService.create(film);
 
         mockMvc.perform(put("/films/{id}/like/{userId}", 1L, 999L))
@@ -309,34 +316,8 @@ public class FilmControllerTest {
     }
 
     @Test
-    void shouldRemoveValidLike() throws Exception {
-        Film film = new Film();
-        film.setName("film");
-        film.setDescription("description");
-        film.setReleaseDate(LocalDate.of(2007, 7, 7));
-        film.setDuration(70);
-        Film savedFilm = filmService.create(film);
-        Long filmId = savedFilm.getId();
-
-        User user = new User();
-        user.setEmail("user@yandex.ru");
-        user.setLogin("user1234");
-        user.setBirthday(LocalDate.of(2000, 1, 1));
-        User savedUser = userService.create(user);
-        Long userId = savedUser.getId();
-
-        mockMvc.perform(put("/films/{id}/like/{userId}", filmId, userId))
-                .andExpect(status().isOk());
-
-        mockMvc.perform(delete("/films/{id}/like/{userId}", filmId, userId))
-                .andExpect(status().isOk());
-
-        assert !savedFilm.getLikes().contains(userId);
-    }
-
-    @Test
     void shouldFailOnRemovingLike_onUnknownFilm() throws Exception {
-        User user = new User();
+        var user = new NewUserRequest();
         user.setEmail("user@yandex.ru");
         user.setLogin("user1234");
         user.setBirthday(LocalDate.of(2000, 1, 1));
@@ -348,11 +329,14 @@ public class FilmControllerTest {
 
     @Test
     void shouldFailOnRemovingLike_onUnknownUser() throws Exception {
-        Film film = new Film();
+        var film = new NewFilmRequest();
         film.setName("film");
         film.setDescription("description");
         film.setReleaseDate(LocalDate.of(2007, 7, 7));
         film.setDuration(70);
+        var mpa = new RatingDto();
+        mpa.setId(1L);
+        film.setMpa(mpa);
         filmService.create(film);
 
         mockMvc.perform(delete("/films/{id}/like/{userId}", 1L, 999L))
